[tool.poetry]
name = "wizard"
version = "0.1.0"
description = ""
authors = ["duvshani"]
readme = "README.md"

[tool.poetry.dependencies]
black = "*"
isort = "*"
python = "^3.10"
pandas = "*"
numpy = "*"
pyinstrument = "*"
pytest = "*"
torch = "*"
gymnasium = "*"
plotly = "*"
tensorboard = "*"
Pillow = "*"
kaleido = "0.2.1"
# stable_baselines3 = "*"
# ray = "*"
# rlcard = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

